fix: A bit smaller gap on sign-in page.

--- a/mcorg.backends/webapp/src/main/resources/static/styles/main.css
+++ b/mcorg.backends/webapp/src/main/resources/static/styles/main.css
@@ -429,7 +429,7 @@ main#sign-in {
     justify-content: center;
     align-items: center;
 
-    gap: var(--spacing-xl);
+    gap: var(--spacing-lg);
 
     height: 100%;
 }
